php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #68381 fpm_unix_init_main ignores log_level
Submitted: 2014-11-08 22:48 UTC Modified: 2014-11-18 16:49 UTC
From: dz at heroku dot com Assigned: remi (profile)
Status: Closed Package: FPM related
PHP Version: 5.6.2 OS: OS X 10.9.5
Private report: No CVE-ID: None
 [2014-11-08 22:48 UTC] dz at heroku dot com
Description:
------------
The log level will be ignored throughout log events in `fpm_unix_init_main`, until
the very end when `zlog_set_level` is finally called.

In particular, `fpm_unix_conf_wp` may throw notices like this:

> [08-Nov-2014 17:13:36] NOTICE: [pool www] 'user' directive is ignored when…

Which will still appear even if `log_level` in php-fpm.conf is set to `warning`+

To reproduce, set "log_level" in `php-fpm.conf` to warning. On startup as non-root, these two notices will still appear:

> [08-Nov-2014 17:13:36] NOTICE: [pool www] 'user' directive is ignored when FPM is not running as root
> [08-Nov-2014 17:13:36] NOTICE: [pool www] 'user' directive is ignored when FPM is not running as root



Patches

Pull Requests

Pull requests:

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2014-11-08 22:48 UTC] dz at heroku dot com
https://github.com/php/php-src/pull/894
 [2014-11-18 16:46 UTC] remi@php.net
Automatic comment on behalf of dzuelke@gmail.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=03cf70ab1e35305443ac379ee5219d19aeeb6ba2
Log: Fixed bug #68381 Set FPM log level earlier during init
 [2014-11-18 16:46 UTC] remi@php.net
-Status: Open +Status: Closed
 [2014-11-18 16:46 UTC] remi@php.net
Automatic comment on behalf of dzuelke@gmail.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=9a43410871c76f9b3e712295ff49fa1f832ab17e
Log: Fixed bug #68381 Set FPM log level earlier during init
 [2014-11-18 16:49 UTC] remi@php.net
-Assigned To: +Assigned To: remi
 [2014-11-18 20:34 UTC] ab@php.net
Automatic comment on behalf of dzuelke@gmail.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=9a43410871c76f9b3e712295ff49fa1f832ab17e
Log: Fixed bug #68381 Set FPM log level earlier during init
 [2014-11-19 15:49 UTC] remi@php.net
Automatic comment on behalf of dzuelke@gmail.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=03cf70ab1e35305443ac379ee5219d19aeeb6ba2
Log: Fixed bug #68381 Set FPM log level earlier during init
 [2014-11-26 16:21 UTC] ab@php.net
Automatic comment on behalf of dzuelke@gmail.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=03cf70ab1e35305443ac379ee5219d19aeeb6ba2
Log: Fixed bug #68381 Set FPM log level earlier during init
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Tue Sep 15 06:00:02 2026 UTC