sapi/fpm/fpm/fpm_unix.c
@@ -231,6 +231,8 @@ int fpm_unix_init_main() /* {{{ */
 	struct fpm_worker_pool_s *wp;
 	int is_root = !geteuid();
 
+	zlog_set_level(fpm_globals.log_level);
+
 	if (fpm_global_config.rlimit_files) {
 		struct rlimit r;
 
@@ -361,7 +363,6 @@ int fpm_unix_init_main() /* {{{ */
 		}
 	}
 
-	zlog_set_level(fpm_globals.log_level);
 	return 0;
 }
 /* }}} */
